[build-system]
requires = ["wheel", "setuptools == 68.2.2", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "surfgeopy"
version = "1.0.0-alpha"
authors = [
  { name="Gentian Zavalani", email="g.zavalani@hzdr.de" },
]
description = "High-order volume elements (HOVE) designed for the integration of scalar functions over regular embedded manifolds."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://codebase.helmholtz.cloud/interpol/surfgeopy"
"Bug Tracker" = "https://codebase.helmholtz.cloud/interpol/surfgeopy/issues"

[tool.setuptools_scm]
write_to = "surfgeopy/version.py"
